--- a/general/high-performance.mdx
+++ b/general/high-performance.mdx
@@ -1,4 +1,5 @@
 ---
 title: High Perfomance
 description: "**Mazari** is a software designed to enhance your cryptocurrency experience seamlessly with our comprehensive package of Alpha, Analytics, and Automation features."
+icon: "bolt"
 ---
