--- a/general/introduction.mdx
+++ b/general/introduction.mdx
@@ -1,6 +1,7 @@
 ---
 title: Introduction
 description: "**Mazari** is a software designed to enhance your cryptocurrency experience seamlessly with our comprehensive package of Alpha, Analytics, and Automation features."
+icon: book-open
 ---
 
 ## What does Mazari provide?
