--- a/general/supported-platforms-and-chains.mdx
+++ b/general/supported-platforms-and-chains.mdx
@@ -1,6 +1,7 @@
 ---
 title: Supported platforms and chains
 description: "Our team is working hard to support as many platforms and chains as possible. Here is a list of the platforms and chains we currently support."
+icon: "globe"
 ---
 
 #### EVM NFT Minting:
@@ -14,4 +15,4 @@ description: "Our team is working hard to support as many platforms and chains a
 
 ### Solana DeFi:
 
--   [Raydium](https://magiceden.io/)
+-   [Raydium](/defi-modules/solana/raydium)
