--- a/general/introduction.mdx
+++ b/general/introduction.mdx
@@ -39,7 +39,7 @@ icon: book-open
         icon="display-chart-up"
         href="/defi-modules/introduction"
     >
-        NFTs Modules supporting several blockchains & platforms: Mint, Consolidate, List, Analyze, and Track!
+        DeFi Modules supporting several blockchains: Buy, Sell and Track!
     </Card>
 
     <Card
