--- a/general/supported-platforms-and-chains.mdx
+++ b/general/supported-platforms-and-chains.mdx
@@ -4,15 +4,19 @@ description: "Our team is working hard to support as many platforms and chains a
 icon: "globe"
 ---
 
-#### EVM NFT Minting:
+#### Ethereum:
 
--   [Contract Minter]()
+    -   [Contract Minter]()
+    -   [UniswapV2]()
+    -   [UniswapV3]()
 
-### Ethereum DeFi:
+#### Solana:
 
--   [UniswapV2]()
--   [UniswapV3]()
-
-### Solana DeFi:
-
+-   [MagicEden Launchpad]()
 -   [Raydium](/defi-modules/solana/raydium)
+-   [Orca](/defi-modules/solana/raydium)
+
+#### Polygon:
+
+    -   [Contract Minter]()
+    -   [MagicEden Launchpad]()
