--- a/defi-modules/introduction.mdx
+++ b/defi-modules/introduction.mdx
@@ -1,5 +1,5 @@
 ---
 title: DeFi Modules
 description: "Here you will find guides on how to use our DeFi modules"
-icon: "bolt"
+icon: "display-chart-up"
 ---
